[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/heartbar.gd" type="Script" id=1]
[ext_resource path="res://Sprites/heart_full.png" type="Texture" id=2]
[ext_resource path="res://Sprites/pixil-frame-0 (2).png" type="Texture" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Health1" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Health2" type="Sprite" parent="."]
position = Vector2( 32, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Health3" type="Sprite" parent="."]
position = Vector2( 64, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Temp" type="Sprite" parent="."]
position = Vector2( 96, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
